# Universal-visualizer

./: .dockerignore  .gitignore  .importlinter  Dockerfile  README.md  agents.py  dev_server.py  env.example  fixed_main_v6.py  github_publisher.py  index.html  llm_client.py  main.py  models.py  orchestrator.py  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  store.py
backend/: __init__.py  agents.py  config.py  github_publisher.py  logging_setup.py  models.py  orchestrator.py  store.py
backend/api/: __init__.py  builds.py  deps.py  health.py  jobs.py  manifest.py  preview.py  spa.py  suggestions.py
backend/legacy/: index.html
backend/llm/: __init__.py  client.py  errors.py  pricing.py  reasoning.py  tasks.py  tracker.py
backend/services/: __init__.py  build_orchestrator.py  manifest_builder.py
backend/viz_generator/: __init__.py  cli.py  events.py  files.py  llm.py  npm.py  parsing.py  postprocess.py  prompts.py  screenshot.py  select.py  topic.py  validator.py
backend/viz_generator/phases/: build_loop.py  draft.py  (+2 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
tests/: conftest.py
tests/contract/: conftest.py  test_build.py  test_dev_servers.py  test_health.py  test_import_layering.py  test_jobs.py  test_manifest.py  test_preview.py  test_spa_root.py  test_spa_v2_mount.py  test_suggestions.py  test_upload.py  test_viz_cli.py
tests/e2e/: test_vanilla_pipeline.py
tests/unit/: test_models_phase.py  test_orchestrator_phase.py
(+56 files in other folders)
